<resources>
    <string name="app_name">Mealville</string>
    <string name="meal_title">Meal Title</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="cooking_steps">Recipe Steps</string>
    <string name="submit">Submit Recipe</string>
    <string name="new_recipe">New Recipe</string>
    <string name="view_steps">Steps</string>
    <string name="view_ingredients">Ingredients</string>

    <!-- LOGIN & REGISTER -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Don\'t have an account? Create one</string>
    <string name="logo">logo</string>
    <string name="new_account">New Account</string>
    <string name="already_registered_log_in">Have an account? Log in</string>

    <!-- ACTION BAR MENU -->
    <string name="search">Search</string>

    <!-- BOTTOM NAV MENU -->
    <string name="nav_home">Home</string>
    <string name="custom_recipe">Custom Recipes</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_add">New Recipe</string>

    <!-- Blank Fragment Text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home image labels -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="soup">Soups</string>
    <string name="snacks">Snacks</string>

    <!-- Search image labels -->
    <string name="by_meal">Search by food</string>
    <string name="by_ingredients">Search by ingredients</string>

    <!-- Search Result Messages-->
    <string name="failure_message">Something went terribly wrong. Please check your Internet connection and try again later</string>
    <string name="unsuccessful_message">Something went wrong. Please try again later</string>
    <string name="no_results">No results found</string>
    <string name="api_recipe_author">by Spoonacular</string>


</resources>
